--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AdoptApp</string>
+    <string name="botonIngresar">Ingresar</string>
+    <string name="botonRegistrarse">Registrarse</string>
+    <string name="descripcionLogo">Logo de AdoptApp</string>
 </resources>
