añadida actividad filtro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
         <item>Macho</item>
     </string-array>
     <string name="botonContinuar">Continuar</string>
+    <string name="botonAplicarFiltro">Aplicar filtro</string>
 </resources>
