--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="botonVerMisAnimales">Ver mis animales</string>
     <string name="botonVerPeticiones">Ver peticiones</string>
     <string name="botonEventos">Eventos</string>
-    <string name="hintEdad">Edad</string>
+    <string name="hintEdad">Edad (en años)</string>
     <string-array name="TipoAnimal">
         <item>Tipo de animal</item>
         <item>Perro</item>
@@ -52,5 +52,5 @@
     </string-array>
     <string name="botonContinuar">Continuar</string>
     <string name="botonAplicarFiltro">Aplicar filtro</string>
-    <string name="distanciaFiltro">Distancia en km máxima</string>
+    <string name="distanciaFiltro">Distancia máxima desde mi ubicación (en km)</string>
 </resources>
