--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">AdoptApp</string>
     <string name="botonIngresar">Ingresar</string>
-    <string name="botonRegistrarse">Registrarse</string>
+    <string name="botonRegistrarse">Crear cuenta</string>
     <string name="descripcionImagenLogo">Logo de AdoptApp</string>
     <string name="hintEmail">Correo electrónico</string>
     <string name="hintContrasena">Contraseña</string>
