--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,8 @@
     <string name="distanciaFiltro">Distancia máxima desde mi ubicación (en km)</string>
     <string name="mostrarCargando">Cargando resultados</string>
     <string name="resultadosNoEncontrados">No hay resultados</string>
+    <string name="botonAdoptar">Adoptar</string>
+    <string name="botonApadrinar">Apadrinar</string>
+    <string name="botonHacerDonacion">Realizar donación</string>
+    <string name="nombreAnimalPerfil">Nombre animal</string>
 </resources>
