agregados descriptores para filtro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="Nervioso">Nervioso</string>
     <string name="Dominante">Dominante</string>
     <string name="Leal">Leal</string>
+    <string name="NecesidadesEspeciales">Con necesidades físicas especiales (p.ej. discapacidad)</string>
 </resources>
