--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,13 +63,13 @@
     <string name="textDescriptores">Descriptores de comportamiento</string>
     <string name="Alegre">Alegre</string>
     <string name="Calmado">Calmado</string>
-    <string name="Jugueton">Jugueton</string>
-    <string name="Comelon">Comelon</string>
-    <string name="Timido">Timido</string>
+    <string name="Jugueton">Juguetón</string>
+    <string name="Comelon">Comelón</string>
+    <string name="Timido">Tímido</string>
     <string name="Ansioso">Ansioso</string>
-    <string name="Energetico">Energetico</string>
+    <string name="Energetico">Energético</string>
     <string name="Fuerte">Fuerte</string>
-    <string name="Empatico">Empatico</string>
+    <string name="Empatico">Empático</string>
     <string name="Ninos">Compatible con niños</string>
     <string name="Destructivo">Destructivo</string>
     <string name="Agresivo">Agresivo</string>
