agregado recoger animal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,6 @@
 
     <string name="rechazar_solicitud">Rechazar</string>
     <string name="aceptar_solicitud">Aceptar</string>
+    <string name="recoger_animal">Ve por tu adoptado</string>
 
 </resources>
