agregado formalizar adopción

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,9 @@
 
     <string name="ver_datos_solicitante">Ver perfil solicitante</string>
     <string name="nombre_persona">Nombre de la persona</string>
+    <string name="formalizacion_adopcion">Formaliza la adopción</string>
+    <string name="btn_formalizacion_adopcion">Formalizar</string>
+
+    <string name="solicitudes_aceptadas">Ver solicitudes aceptadas</string>
 
 </resources>
